@@ -1,19 +1,21 @@
 import com.typesafe.sbt.packager.archetypes.TemplateWriter
 import sbt.Keys.{sourceGenerators, _}
 import sbt._
-import sbtcrossproject.CrossPlugin.autoImport.crossProject
 import sbt.internal.inc.ReflectUtilities
 import sbtassembly.MergeStrategy
+import sbtcrossproject.CrossPlugin.autoImport.crossProject
 
 enablePlugins(JavaServerAppPackaging, JDebPackaging, SystemdPlugin, GitVersioning)
 scalafmtOnCompile in ThisBuild := true
+Global / cancelable := true
+Global / coverageExcludedPackages := ".*"
 
 val versionSource = Def.task {
   // WARNING!!!
   // Please, update the fallback version every major and minor releases.
   // This version is used then building from sources without Git repository
   // In case of not updating the version nodes build from headless sources will fail to connect to newer versions
-  val FallbackVersion = (0, 14, 4)
+  val FallbackVersion = (0, 15, 0)
 
   val versionFile      = (sourceManaged in Compile).value / "com" / "wavesplatform" / "Version.scala"
   val versionExtractor = """(\d+)\.(\d+)\.(\d+).*""".r
@@ -44,18 +46,29 @@ logBuffered := false
 
 inThisBuild(
   Seq(
-    scalaVersion := "2.12.6",
+    scalaVersion := "2.12.7",
     organization := "com.wavesplatform",
     crossPaths := false,
     scalacOptions ++= Seq("-feature", "-deprecation", "-language:higherKinds", "-language:implicitConversions", "-Ywarn-unused:-implicits", "-Xlint")
   ))
 
-resolvers += Resolver.bintrayRepo("ethereum", "maven")
+resolvers ++= Seq(
+  Resolver.bintrayRepo("ethereum", "maven"),
+  Resolver.bintrayRepo("dnvriend", "maven"),
+  Resolver.sbtPluginRepo("releases")
+)
 
 fork in run := true
 javaOptions in run ++= Seq(
   "-XX:+IgnoreUnrecognizedVMOptions",
   "--add-modules=java.xml.bind"
+)
+
+Test / fork := true
+Test / javaOptions ++= Seq(
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-modules=java.xml.bind",
+  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED"
 )
 
 val aopMerge: MergeStrategy = new MergeStrategy {
@@ -196,13 +209,21 @@ def allProjects: List[ProjectReference] = ReflectUtilities.allVals[Project](this
   p: ProjectReference
 }
 
-addCommandAlias("checkPR", """;set scalacOptions in ThisBuild ++= Seq("-Xfatal-warnings"); Global / checkPRRaw""")
+addCommandAlias(
+  "checkPR",
+  """;
+    |set scalacOptions in ThisBuild ++= Seq("-Xfatal-warnings");
+    |Global / checkPRRaw;
+    |set scalacOptions in ThisBuild -= "-Xfatal-warnings";
+  """.stripMargin
+)
 lazy val checkPRRaw = taskKey[Unit]("Build a project and run unit tests")
 checkPRRaw in Global := {
   try {
     clean.all(ScopeFilter(inProjects(allProjects: _*), inConfigurations(Compile))).value
   } finally {
     test.all(ScopeFilter(inProjects(langJVM, node), inConfigurations(Test))).value
+    (langJS / Compile / fastOptJS).value
     compile.all(ScopeFilter(inProjects(generator, benchmark), inConfigurations(Test))).value
   }
 }
@@ -211,7 +232,8 @@ lazy val lang =
   crossProject(JSPlatform, JVMPlatform)
     .withoutSuffixFor(JVMPlatform)
     .settings(
-      version := "0.0.1",
+      version := "1.0.0",
+      coverageExcludedPackages := ".*",
       // the following line forces scala version across all dependencies
       scalaModuleInfo ~= (_.map(_.withOverrideScalaVersion(true))),
       test in assembly := {},
@@ -226,7 +248,8 @@ lazy val lang =
           Dependencies.monix.value ++
           Dependencies.scodec.value ++
           Dependencies.fastparse.value,
-      resolvers += Resolver.bintrayIvyRepo("portable-scala", "sbt-plugins")
+      resolvers += Resolver.bintrayIvyRepo("portable-scala", "sbt-plugins"),
+      resolvers += Resolver.sbtPluginRepo("releases")
     )
     .jsSettings(
       scalaJSLinkerConfig ~= {
@@ -234,9 +257,24 @@ lazy val lang =
       }
     )
     .jvmSettings(
+      coverageExcludedPackages := "",
+      publishMavenStyle := true,
+      credentials += Credentials(Path.userHome / ".sbt" / ".credentials"),
+      publishTo := Some("Sonatype Nexus" at "https://oss.sonatype.org/service/local/staging/deploy/maven2"),
+      name := "RIDE Compiler",
+      normalizedName := "lang",
+      description := "The RIDE smart contract language compiler",
+      homepage := Some(url("https://docs.wavesplatform.com/en/technical-details/waves-contracts-language-description/maven-compiler-package.html")),
+      licenses := Seq(("MIT", url("https://github.com/wavesplatform/Waves/blob/master/LICENSE"))),
+      organization := "com.wavesplatform",
+      organizationName := "Waves Platform",
+      organizationHomepage := Some(url("https://wavesplatform.com")),
+      scmInfo := Some(ScmInfo(url("https://github.com/wavesplatform/Waves"), "git@github.com:wavesplatform/Waves.git", None)),
+      developers := List(Developer("petermz", "Peter Zhelezniakov", "peterz@rambler.ru", url("https://wavesplatform.com"))),
       libraryDependencies ++= Seq(
-        "org.scala-js"                %% "scalajs-stubs" % "0.6.22" % "provided"
-      ) ++ Dependencies.logging.map(_ % "test") // scrypto logs an error if a signature verification was failed
+        "org.scala-js"                      %% "scalajs-stubs" % "1.0.0-RC1" % "provided",
+        "com.github.spullara.mustache.java" % "compiler" % "0.9.5"
+      ) ++ Dependencies.logging.map(_       % "test") // scrypto logs an error if a signature verification was failed
     )
 
 lazy val langJS  = lang.js
@@ -246,6 +284,7 @@ lazy val node = project
   .in(file("."))
   .settings(
     addCompilerPlugin(Dependencies.kindProjector),
+    coverageExcludedPackages := "",
     libraryDependencies ++=
       Dependencies.network ++
         Dependencies.db ++
@@ -277,3 +316,7 @@ lazy val generator = project
 lazy val benchmark = project
   .enablePlugins(JmhPlugin)
   .dependsOn(node % "compile->compile;test->test", langJVM % "compile->compile;test->test")
+
+lazy val dexgenerator = project
+  .dependsOn(it)
+  .settings(libraryDependencies += "com.github.scopt" %% "scopt" % "3.6.0")
